# hellomath

./: Makefile.am  README.md  configure.ac
docs/: UserManual.md
src/: Makefile.am  hellomath.c
src/hm/: Makefile.am  hm.c  hm.h
tests/: Makefile.am  hellomath_test_00.sh
